--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -58,3 +58,58 @@
   text-align: center;
   line-height: 30px;
 }
+
+.copy-overlay {
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  position: absolute;
+  z-index: 0;
+  transition: transform 0.6s ease-in-out;
+  transform: scale(0.1);
+}
+
+.copy-overlay.open {
+  background: rgb(26, 188, 156);
+  z-index: 10;
+  transform: scale(50);
+  opacity: 1;
+}
+
+.copy-msg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  opacity: 0;
+  transform: scale(0.1);
+}
+
+.copy-msg.open {
+  opacity: 1;
+  transform: scale(1);
+  z-index: 25;
+  transition: all 0.4s ease-in-out;
+  transition-delay: 0.3s;
+}
+
+.copy-msg h1 {
+  color: white;
+  font-size: 4rem;
+  text-transform: uppercase;
+  background: rgba(255, 255, 255, 0.2);
+  width: 100%;
+  padding: 1rem;
+  text-align: center;
+}
+
+.copy-msg p {
+  font-weight: 100;
+}
+
+
