--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,9 +10,16 @@
   height: 100%;
   display: flex;
   align-items: center;
-  padding: .4rem;
+  padding: 0.4rem;
 }
 
 .Navbar .slider-level-info {
   margin-left: 1rem;
+}
+
+.Navbar .select-container {
+  position: absolute;
+  right: 1rem;
+  display: flex;
+  justify-content: center;
 }
