--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -10,7 +10,13 @@
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0.4rem;
+  padding: 0.7rem;
+  text-decoration: none;
+}
+
+.logo a {
+  text-decoration: none;
+  color: black;
 }
 
 .slider-level-info {
