--- a/src/ColorBox.css
+++ b/src/ColorBox.css
@@ -8,7 +8,19 @@
   margin-bottom: -3.5px;
 }
 
-.copy-button {
+.text-white {
+  color: white;
+}
+
+.ColorBox.go-back {
+  background-color: black;
+}
+
+.SingleColorPalette .ColorBox {
+  height: 50%;
+}
+
+.copy-button, .back-button {
   width: 100px;
   height: 30px;
   position: absolute;
@@ -25,8 +37,12 @@
   color: white;
   text-transform: uppercase;
   border: none;
-  opacity: 0;
   cursor: pointer;
+  text-decoration: none;
+}
+
+.copy-button {
+  opacity: 0;
 }
 
 .ColorBox:hover .copy-button {
